--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pgEr2czegpAo68W3z4V9LVgg9Ri23RACjuMtCvA8Qf8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://ovs.asia
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ovsa8524_certificate
+DB_USERNAME=ovsa8524_user
+DB_PASSWORD=TWWoLhU(S&]Y
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
