--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/ovsa85241095/public_html/
-    - /bin/cp -r database $DEPLOYPATH
+    - /bin/cp -r app $DEPLOYPATH
     - /bin/cp -r resources $DEPLOYPATH
-    - /bin/cp .env $DEPLOYPATH
+    - /bin/cp -r routes $DEPLOYPATH
